--- a/Social_links/css/syles.css
+++ b/Social_links/css/syles.css
@@ -2,11 +2,10 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: "Inter";
 }
 @font-face {
     font-family:"Inter";
-    src: url(/assets/fonts/Inter-VariableFont_slnt\,wght.ttf);
+    src: url(/assets/fonts/Inter-VariableFont_slnt,wght.ttf);
 }
 body{
     font-family: "Inter";
