--- a/Social_links/css/syles.css
+++ b/Social_links/css/syles.css
@@ -5,7 +5,7 @@
 }
 @font-face {
     font-family:"Inter";
-    src: url(/assets/fonts/Inter-VariableFont_slnt,wght.ttf);
+    src: url(/assets/fonts/static/Inter-Regular.ttf);
 }
 body{
     font-family: "Inter";
